--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lab11">
-
-        </activity>
+        <activity android:name=".lab11"></activity>
         <activity android:name=".lab12">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".lab13"></activity>
     </application>
 
 </manifest>
