--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lab11"></activity>
-        <activity android:name=".lab12"></activity>
+        <activity android:name=".lab11" />
+        <activity android:name=".lab12" />
         <activity android:name=".lab13">
+        </activity>
+        <activity android:name=".lab2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
