--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity android:name=".lab13">
         </activity>
         <activity android:name=".lab2">
+
+        </activity>
+        <activity android:name=".lab3">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
