--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".lab11" />
         <activity android:name=".lab12" />
-        <activity android:name=".lab13">
-        </activity>
-        <activity android:name=".lab2">
-
-        </activity>
-        <activity android:name=".lab3">
+        <activity android:name=".lab13"></activity>
+        <activity android:name=".lab2"></activity>
+        <activity android:name=".lab3"></activity>
+        <activity android:name=".Project">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
